feat;多动画 多背景

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -21,7 +21,10 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 #app {
   height: 100%;
