feat;底部状态栏,架构修改+pinia

--- a/src/assets/animation.scss
+++ b/src/assets/animation.scss
@@ -10,6 +10,18 @@
         transform: scale(1);
     }
 }
+// 淡入
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 .scaleBM:hover {
     animation: scaleBM 1s infinite;
+}
+.el-empty__image img {
+    animation: fadeIn 1s;
 }
