--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh);
     display: grid;
     grid-template-columns: 210px 1fr;
     grid-template-areas:
