--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -1,12 +1,11 @@
 .container {
-    width: 100%;
-    height: calc(100vh);
+    width: 345px;
+    height: 485px;
     display: grid;
-    grid-template-columns: 210px 1fr;
     grid-template-areas:
-        "header header"
-        "menu main";
-    grid-template-rows: auto 1fr;
+        "main"
+        "footer";
+    grid-template-rows: 1fr auto;
     /* 定义行高 */
     overflow: hidden;
 }
@@ -39,16 +38,11 @@
     grid-area: main;
     height: calc(100vh - 32px);
 }
-
-.menu {
-    grid-area: menu;
-
-    background-color: #fff;
-
-    box-shadow: 1px 0 4px 0 rgba(0, 0, 0, .1);
-    overflow: auto;
-
+.footer {
+    grid-area: footer;
+    height: 32px;
 }
+
 
 .logo {
     vertical-align: -2px;
