fix:正常启动所有任务 配置化nodo 工具;

--- a/src/components/project-list/index.module.less
+++ b/src/components/project-list/index.module.less
@@ -37,8 +37,10 @@
 
 }
 .project-item-menu-item{
-    margin: 12px 0;
     cursor: pointer;
+    & + & {
+        margin-top: 12px;      
+    }
 }
 .project-item:hover .project-item-menu{
     display: block;
