--- a/src/layout/status.module.less
+++ b/src/layout/status.module.less
@@ -19,7 +19,8 @@
   justify-content: right;
   .items {
   line-height: 24px;
-    
+    display: grid;
+    place-items: center;
     height: 100%;
     padding: 0 4px;
     &:hover {
