--- a/src/components/project-list/index.module.less
+++ b/src/components/project-list/index.module.less
@@ -1,13 +1,13 @@
 .container{
     display: grid;
     gap: 12px;
-    grid-template-columns: repeat(2, 142px);
-    grid-template-rows: 100px;
+    box-sizing: border-box;
+    grid-template-rows: auto;
     padding: 24px;
 }
 .project-item{
     height: 100%;
-    background-color: #F0F0F0;
+    background-color: #A0F0A0;
     display: grid;
     place-items: center;
     position: relative;
@@ -15,15 +15,11 @@
     overflow: hidden;
     // hover  占 2row 1col  2行1列
     &:hover{
-        grid-row: span 2;
+        grid-row: span 3 ;
     } 
 }
 .project-item-menu{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-    background-color: #00000065;
+    background-color: #F0F0F0;
     height: 100%;
     width: 100%;
     padding: 12px;
@@ -33,13 +29,16 @@
     &::-webkit-scrollbar {
         display: none;
     }
-    color: white;
+    color: #333;
 
 }
 .project-item-menu-item{
     cursor: pointer;
     & + & {
-        margin-top: 12px;      
+        margin-top: 8px;      
+    }
+    &:hover{
+        opacity: 0.8;
     }
 }
 .project-item:hover .project-item-menu{
