--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -1,6 +1,6 @@
 .container {
-    width: 345px;
-    height: 485px;
+    width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-areas:
         "main"
@@ -8,6 +8,7 @@
     grid-template-rows: 1fr auto;
     /* 定义行高 */
     overflow: hidden;
+    box-shadow:inset 0 0 4px rgba(0, 0, 0, .1);
 }
 .header {
     grid-area: header;
@@ -36,7 +37,8 @@
 
 .main {
     grid-area: main;
-    height: calc(100vh - 32px);
+    height: calc(100vh - 24px);
+    overflow: auto;
 }
 .footer {
     grid-area: footer;
