--- a/src/components/project-list/index.module.less
+++ b/src/components/project-list/index.module.less
@@ -1,25 +1,11 @@
 .container{
-    display: grid;
-    gap: 12px;
+    // gap: 12px;
     box-sizing: border-box;
-    grid-template-rows: auto;
     padding: 24px;
-}
-.project-item{
-    height: 100%;
-    background-color: #A0F0A0;
-    display: grid;
-    place-items: center;
     position: relative;
-    border-radius:  8px;
-    overflow: hidden;
-    // hover  占 2row 1col  2行1列
-    &:hover{
-        grid-row: span 3 ;
-    } 
 }
 .project-item-menu{
-    background-color: #F0F0F0;
+    background-color: rgba(210, 212, 218, 0.1);
     height: 100%;
     width: 100%;
     padding: 12px;
@@ -30,7 +16,11 @@
         display: none;
     }
     color: #333;
-
+    margin-bottom: 12px;
+    overflow: hidden;
+    border-bottom-right-radius: 8px;
+    box-shadow:inset 0 0 1px rgba(0, 0, 0, 0.2);
+    border-bottom-left-radius: 8px;
 }
 .project-item-menu-item{
     cursor: pointer;
@@ -51,4 +41,20 @@
     display: grid;
     place-items: center;
     cursor: pointer;
+}
+.project-item-title-container{
+    background-color: #fff;
+    text-align: center;
+    font-weight: bold;
+
+    box-shadow:inset 0 0 1px rgba(0, 0, 0, 0.5);
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+}
+.project-item-title{
+    padding: 4px 0;
+    background-color: rgba(210, 212, 218, 0.3);
 }
